# AC_court_booking_fix

./: .gitignore  CONSTS.py  README.md  SECRETS.py.template  bot.py  pyproject.toml  requests stuff.txt
