[tool.poetry]
name = "ac_court_booking_fix"
version = "0.1.0"
description = ""
authors = ["Derek Ma <derek@something.com>", "Brian Chen <ihasdapi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.1.5"
webdriver-manager = "^3.5.4"

[tool.poetry.dev-dependencies]
pynvim = "^0.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
